# itk

./: Cargo.toml  LICENSE.txt  README.md  install.ps1  install.sh
.github/workflows/: CLAUDE.md  release.yml
docs/: index.html
src/: CLAUDE.md  clean.rs  clipboard.rs  config.rs  db.rs  detect.rs  discover.rs  frame.rs  gain.rs  init.rs  main.rs  prompt.rs  style.rs  tokens.rs  undo.rs  update.rs  watch.rs
src/cleaners/: build_output.rs  code.rs  csv.rs  dockerfile.rs  env.rs  git_diff.rs  html.rs  json.rs  log.rs  markdown.rs  mod.rs  plain.rs  sql.rs  stack_trace.rs  terraform.rs  yaml.rs
